--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,13 @@
   list-style: none;
 }
 
-nav {
+:root {
+  --primary-colour: #af0f19;
+  --secondary-colour: #6a9d16;
+  --accent-colour: #ebd110;
+}
+
+header {
   background-color: aqua;
   grid-column: 2/ 3;
 
@@ -19,7 +25,7 @@ nav {
   justify-self: end;
   margin-right: 8rem;
 }
-.nav-tabs {
+.header-tabs {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
@@ -36,13 +42,34 @@ nav {
   align-items: center;
 }
 
-header {
+nav {
   background-color: pink;
   grid-row: 1/3;
 }
+.nav-buttons {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  gap: 5rem;
+  margin-top: 2rem;
+}
+.nav-buttons .primary-buttons,
+.nav-buttons .configure-buttons {
+  display: grid;
+
+  gap: 1rem;
+}
+
+#logo {
+  display: grid;
+  grid-template-columns: 80px 1fr;
+  align-items: center;
+}
+#logo h2 {
+  justify-self: left;
+}
 
 main {
-  background-color: black;
+  background-color: yellow;
 }
 
 body {
