--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,13 @@
   --primary-colour: #af0f19;
   --secondary-colour: #6a9d16;
   --accent-colour: #ebd110;
+
+  --nav-primary-colour: #266867;
+}
+
+body {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
 
 header {
@@ -19,6 +26,9 @@ header {
   grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-content: space-around;
+}
+header button {
+  min-width: 5rem;
 }
 
 .profile-buttons {
@@ -43,20 +53,26 @@ header {
 }
 
 nav {
-  background-color: pink;
+  background-color: var(--nav-primary-colour);
   grid-row: 1/3;
 }
 .nav-buttons {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+
   gap: 5rem;
   margin-top: 2rem;
 }
 .nav-buttons .primary-buttons,
 .nav-buttons .configure-buttons {
   display: grid;
-
-  gap: 1rem;
+  grid-template-columns: 1fr;
+  min-width: 100%;
+}
+.primary-buttons button,
+.configure-buttons button {
+  height: 3rem;
+  text-align: left;
+  background-color: transparent;
 }
 
 #logo {
@@ -70,9 +86,4 @@ nav {
 
 main {
   background-color: yellow;
-}
-
-body {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
 }
